	Changed: Configuration objects are now cached for better performances
	Changed: Mail body footprints are now stored in flat file instead of database ( Exception mail writer )
	Changed: Mails are now sent every 24 hours in context of an identical exception ( Exception mail writer )
	Changed: Writers are now lazy-loaded ( Exception writers )
	Fixed: The MAIL_WRITER_EXPIRY_TIME configuration parameter is not honored ( Exception mail writer )
	Fixed: Undefined sSearch index in admin_log.php
	Fixed: Useless initialization routines in context of the AJAX requests ( Initializer )
	Fixed: Wrong routine initialization order ( Intializer )
	Improved: Fallback template ( Exception browser writer )
	Removed MAIL_BODY_FOOTPRINTS and MAIL_WRITER_EXPIRY_TIME configuration parameters ( Exception mail writer )
	Rewritten: Handler for uncaught exceptions ( including writers )

------------------------------------------------------------------------------------------------------------------------
1.1.17
------------------------------------------------------------------------------------------------------------------------

2014-11-17: Laurent Declercq
	RELEASE i-MSCP 1.1.17

CONGIGS
	Added: Dedicated configuration template file for Dovecot 2.1.x
	Fixed: SSLv2 and SSLv3 must be disabled to prevent POODLE attacks ( Postfix, Dovecot >= 2.1, Proftpd )
	Removed: The iterate_query parameter from the dovecot-sql.conf file ( Parameter not available in Dovecot 1.x )

ENGINE
	Added: Cron task attributes validation routines ( Servers::cron::cron )
	Fixed: Cron server is broken - Unable to remove cron task ( Servers::cron::cron )

GUI
	Added: Browser detection capability (i18n)
	Added: New static_* CSS classes for static page messages ( Layout )
	Changed: The flash messages are now positioned relatively and over the page body ( Layout )
	Changed: Lowered Gzip compression level to avoid high server load
	Fixed: Default language set through admin/settings is not used